@@ -12,7 +12,7 @@
 #include <stddef.h>
 
 void
-agb_inidat (agb_dat * const restrict dat)
+agb_inidat (struct agb_dat * const restrict dat)
 {
 	dat->dopat = false;
 	dat->pth   = NULL;
